syntax = "proto3";

package attrpubapi_v3;

import "Attribute.proto";

option java_package = "com.yoti.attrpubapi_v3";
option java_outer_classname = "AttrProto";


// AttributeAndId is a simple container for holding an attribute's value
// alongside its ID.
message AttributeAndId {
	Attribute attribute = 1;

	bytes attribute_id = 2;
}


message AttributeAndIdList {
    repeated AttributeAndId attribute_and_id_list = 1;
}


message AttributeList {
    repeated Attribute attributes = 1;
}
